# LLM-RAG-Chatbot

./: 404.html  index.html  mkdocs.yml  pyproject.toml
business/business/: index.html
business/data/: index.html
business/design_chatbot/: index.html
business/problem_requirements/: index.html
conclusion/: index.html
deployment/chat_ui/: index.html
deployment/fastapi/: index.html
deployment/orck/: index.html
docs/: conclusion.md  index.md  prerequisites.md  proejct-overview.md
langchain/: .env  Dockerfile  docker-compose.yml  pyproject.toml
langchain/agents/: index.html
langchain/business_data/: data.py
langchain/chat_model/: index.html
langchain/chroma_data/: index_metadata.pickle
langchain/introduction/: index.html
langchain/langchain_intro/: chatbot.py  create_retriever.py  hospital_agent_executor.py  message_prompt_template.py  messages.py  prompt_template_1.py  review_chain.py  semantic_search.py
langchain/lcel/: index.html
langchain/prompt_template/: index.html
langchain/rag_chatbot/chatbot_api/: pyproject.toml
langchain/rag_chatbot/chatbot_api/src/agents/: hospital_rag_agent.py  test_rag_agent.py
langchain/rag_chatbot/chatbot_api/src/chains/: hospital_cypher_chain.py  hospital_review_chain.py  test_cyper_chain.py  test_review_chain.py
langchain/rag_chatbot/chatbot_api/src/tools/: test_wait_times.py  wait_times.py
langchain/retrieval_objects/: index.html
langchain/secrets/: Neo4j-0b366f67-Created-2024-04-11.txt
prerequisites/: index.html
proejct-overview/: index.html
search/: search_index.json
tags/: index.html
(+37 files in other folders)
